--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Integrational tests fro Omoide project"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "attrs>=24.2.0",
     "coverage>=7.6.8",
+    "httpx>=0.27.2",
     "omoide-client>=0.3.10",
     "pytest>=8.3.3",
+    "python-dateutil>=2.9.0.post0",
 ]
 
 [tool.ruff]
