--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "attrs>=24.2.0",
     "coverage>=7.6.8",
     "httpx>=0.27.2",
+    "loguru>=0.7.2",
     "omoide-client>=0.3.10",
     "pytest>=8.3.3",
     "python-dateutil>=2.9.0.post0",
